# rabbitmq-cluster

./: .dockerignore  .env  .erlang.cookie  .gitignore  Dockerfile  README.md  docker-compose.yml  publish_message.sh  setup_cluster.sh  setup_policies.sh  setup_topology.sh  setup_user.sh
clients/: README.md  cleanup.sh  setup.sh
clients/go/: consumer.go  go.mod  go.sum  publisher.go  stream_consumer.go  stream_publisher.go
clients/py/: mqtt_consumer.py  mqtt_publisher.py  pika_consumer.py  pika_publisher.py  pyproject.toml  rstream_consumer.py  rstream_publisher.py  stomp_consumer.py  stomp_publisher.py
scripts/: backup_instance.sh  import_definitions.sh  publish_message.sh  setup_federation.sh  setup_policies.sh  setup_retry_dlx_topology.sh  setup_shovel.sh  setup_stream.sh  setup_team.sh
var/grafana/: config.monitoring
var/grafana/provisioning/datasources/: datasource.yml
var/prometheus/config/: prometheus.yml
var/rabbitmq/: Dockerfile  rabbitmq1.json  rabbitmq2.json  rabbitmq3.json
var/rabbitmq/benchmarks/: publish-consume-spec.js
var/rabbitmq/results/: index.html  publish-consume-result.js
var/terraform/rabbitmq1/: events-topology.tf  federation.tf  filter-topology.tf  legacy-queue.tf  retry-topology.tf  terragrunt.hcl
var/terraform/rabbitmq2/: terragrunt.hcl
var/terraform/rabbitmq3/: federate-all.tf  terragrunt.hcl
var/terraform/src/: main.tf  permissions.tf  provider.tf  request-retry.tf  user.tf  variables.tf
